# static-share

./: CMakeLists.txt  README.md  main.cpp  makefile  test.cpp
frontend/: index.html
frontend/css/: style.css
frontend/js/: index.js  vue.global.min.js
